src/app/snapshots/dotfiles__app__workflow_ui__tests__snapshot_workflow_log_view.snap
---
source: src/app/workflow_ui.rs
assertion_line: 166
expression: rendered
---
┌Menu──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│> Run Tools                                                                                                           │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Log───────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Starting workflow...                                                                                                  │
│Running tools...                                                                                                      │
│Completed successfully.                                                                                               │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
