src/app/snapshots/dotfiles__app__workflow_ui__tests__snapshot_workflow_with_warning.snap
---
source: src/app/workflow_ui.rs
assertion_line: 183
expression: rendered
---
┌Menu──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│> Run Tools                                                                                                           │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Log───────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│WARN: Tool dependencies have changedTool execution started                                                            │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
